Added  html and CSS

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Crystal Collector</title>
+    <link rel= "stylesheet" href="assets/css/style.css">
+    <link href="assets/css/reset.css">
 </head>
 <body>
-    
+    <h1>Crystal Collector</h1>
+
+    <h3 id = "totalNumber">Total Number:</h3>
+
+    <userwinslosses>
+        <div id = "wins">Wins: </div>
+        <div id = "losses">Losses: </div>
+    </userwinslosses>
+
+    <fourCrystals>
+        <img class = "crystals" id= "lavendar" src="assets/images/lavendar.jpg">
+        <img class = "crystals" id= "red" src="assets/images/red.jpg">
+        <img class = "crystals" id = "yellow" src="assets/images/yellow.jpg">
+        <img class = "crystals" id= "green" src="assets/images/green.png">
+    </fourCrystals>
+
+
 </body>
 </html>
